[package]
name = "bloomfilter"
version = "1.0.9"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Bloom filter implementation"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-bloom-filter"
repository = "https://github.com/jedisct1/rust-bloom-filter"
edition = "2018"

[dependencies]
bit-vec = "0.6.3"
getrandom = { version = "0.2.8", optional = true }
siphasher = "0.3.10"
fasthash = "0.4.0"
byteorder = "1.4.3"
hex = "0.4.3"
base64 = "0.21.2"
rand = "0.8.5"

[features]
default = ["random"]
random = ["getrandom"]
serde = ["siphasher/serde_std", "bit-vec/serde"]
